Update styling of profile page and dashboard page

--- a/client/templates/layout.ejs
+++ b/client/templates/layout.ejs
@@ -5,6 +5,7 @@
     <title>driftly</title>
     <link rel="stylesheet" href="/bower_components/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
 
 
