--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,13 +1,25 @@
 .tile {
   width: 200px;
   height: 200px;
-  display: inline-block;
+  display: inline-flex;
   box-sizing: border-box;
   background: #fff;
   padding: 20px;
   margin: 30px;
   border-style: solid;
   border-width: 1px;
+  text-align: center;
+}
+
+.tile .container {
+  text-align: center;
+  margin: auto;
+  height: 115px;
+}
+
+.tile .book {
+  max-width: 100px;
+  max-height: 100px;
 }
 
 .title {
