--- a/client/templates/partials/backbone_templates.ejs
+++ b/client/templates/partials/backbone_templates.ejs
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Driftly</a>
+        <a class="navbar-brand" href="#"><i class="fa fa-circle-o-notch fa-spin"></i> Driftly</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -37,16 +37,41 @@
 </script>
 
 <script id='tile' type='text/x-handlebars-template'>
+  <div class="container">
     <h2>{{ name }}</h2>
-    {{ steps }}
-    </div>
+    <p>{{ latest }}</p>
+  </div>
 </script>
 
 <script id='profile' type='text/x-handlebars-template'>
     <br>
     <br>
-    <h1>Profile</h1>
-    {{ name }}
+      <h1>Profile</h1>
+      <div class="tile">
+        <div class="container">
+          <i class="fa fa-github fa-4x"></i>
+          <p>"{{ gitCommit }}"</p>
+        </div>
+      </div>
+      <div class="tile">
+        <div class="container">
+          <i class="fa fa-twitter fa-4x"></i>
+          <p>"{{ tweet }}"</p>
+        </div>
+      </div>
+      <div class="tile">
+        <div class="container">
+          <i class="fa fa-heart fa-4x"></i>
+          <p>{{ steps }} steps</p>
+        </div>
+      </div>
+      <div class="tile">
+        <div class="container">
+          <img src="{{ bookUrl }}" class="book" />
+          <!-- <i class="fa fa-book fa-4x"></i> -->
+          <p>{{ book }}</p>
+        </div>
+      </div>
 </script>
 
 <script id='connect' type='text/x-handlebars-template'>
