--- a/client/templates/signin.ejs
+++ b/client/templates/signin.ejs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1>driftly</h1>
-        <h2>Creep on your best friends</h2>
+        <h2>Stay Connected</h2>
         <br>
         <br>
         <a href="/auth/facebook" class="btn btn-block btn-social btn-facebook">
